# ExtratorVideosCurso

./: .env.example  .env.example2  .env.openrouter.example  .flake8  .gitignore  COMO_SUBIR_GITHUB.md  CONFIGURACOES_APLICADAS.md  CONTRIBUTING.md  FALLBACK_SYSTEM.md  GITHUB_SETUP.md  GUIA_MODELOS_PROMPT.md  INTEGRACAO_GITHUB.md  MODELS_ANALYSIS.md  MODOS_DE_USO.md  OPENROUTER_GUIDE.md  README.md  REPOSITORIO_CRIADO.md  accounts.json.example  captured_manifests.json  credentials.json  debug_target.txt  hls_out.json  inspect_html_structure.py  mp4_out.json  prompt_modelo4.json  prompt_padrao_orientacoes.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  targets.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
arquivos_obsoletos/: .env.example  CONFIGURAR_BRANCH_PROTECTION.md  CONTEXTO_PROJETO.md  MODELO2_IMPLEMENTACAO.md  PARECER_TECNICO.md  check_json.py  clean_templates.py  inspect_html.py  prompt_padrao.json  prompt_padrao_orientacoes.json  setup_branch_protection.sh
browser_extension/: COMO_TESTAR.md  README.md  background.js  content.js  inject.js  library.js  manifest.json  overlay.js  popup.html  popup.js  processing_ui.js
design-system/: design-system-configuracoes.md  design-system-edito-de-prompts.md  design-system-extensao-aba-biblioteca.md  design-system-extensao-aba-captura.md  design-system-extensao-aba-config.md  design-system-extensao-aba-manifests.md  design-system-interface-web-video-processor-solar-pop-edition.md  design-system-relatorio.md  prp-extrator-video.md
doc/: BATCH_PROCESSING.md  CHANGELOG.md  ESTRUTURA_PROJETO.md  OPENROUTER_FREE_MODELS.md  QUICK_START.md
docs/: API.md  USAGE.md
extrator_videos/: __init__.py  antibot.py  auth.py  batch_cli.py  browser.py  cli.py  credential_manager.py  dash.py  downloader.py  drm.py  extractor.py  gemini_client.py  hls.py  hls_downloader.py  instrumentation.py  logger_json.py  metadata.py  network_capture.py  openrouter_client.py  postprocess.py  prompt_loader.py  prompt_manager.py  prompt_optimizer.py  prompt_validator.py  report_renderer.py  resolve_cache.py  resolver.py  schema.py  security.py  transcribe_cli.py  transcription.py  transcription_cache.py  verifications.py  whisper_engine.py  youtube_downloader.py
modelos_prompts/: MODELO 2 PROMPT - Transcrição Video Aulas.md  MODELO 4 PROMPT - Transcrição Video Aulas.md  README.md  modelo3.md  modelo5.md  template.md
tests/: analyze_log.py  debug_deep_scan.py  test_captured_manifests.py  test_cookie_handoff.py  test_credential_lookup.py  test_prompt_manager.py  test_regex.py  test_source_wait.py  test_ytdlp_check.py  test_ytdlp_hubla.py
web_interface/: APLICAR_MELHORIAS.md  MELHORIAS_UX_UI.md  README.md  RESUMO_MELHORIAS_IMPLEMENTADAS.md  app.py  (+4 more)
(+34 files in other folders)
